SUBDIRS = libltdl COMMON PLUGINS PLASMA FIRE EXPLOSION STARFIELD COPPERBARS CANDYBAR SINUSSCROLLER LENS \
	SHADEBOB JUMPINGSCROLL BOBS UNLIMITEDBOBS ROTOZOOM EQUALIZER CIRCLESCROLLER SINEWAVE FLIPIMAGE \
	WATER DOOMMELT SPIRALTWIST WPCG OPCODE-1.2 DEMON BUMP2D TERRAIN UFOS PLASMACUBE TWINSCROLLER \
	SPIRALSINESCROLL BARSCROLLER TUNNEL BLOB TUXTRAIL DEMONS MULTILAYER RAYTRACER  
EXTRA_DIST = GFX/eye.png GFX/tuxblackbg.png GFX/font.pcx GFX/tile.png SOUND/MODS/tuneforit.mod  \
	GFX/TDEC_2.png TEXTURES/cd2000.pcx MODELS/tris1.MD2 MODELS/weapon.MD2 TEXTURES/weapon.pcx \
	TEXTURES/SKY3_FT.pcx TEXTURES/SKY3_RT.pcx TEXTURES/SKY3_BK.pcx TEXTURES/SKY3_LF.pcx \
	TEXTURES/terrain.pcx TEXTURES/ufo.pcx MODELS/ufo.MD2 GFX/tdec-small.pcx \
	TEXTURES/tex35.pcx XHACKS/eruption.c XHACKS/metaballs.c
